Added-rules-modal+animation

--- a/index.html
+++ b/index.html
@@ -33,25 +33,54 @@
 
       <div class="choice3-container">
         <div class="triangle-container">
-          <img id="triangle" src="./images/bg-triangle.svg" alt="" />
+          <img
+            id="triangle"
+            src="./images/bg-triangle.svg"
+            alt="triangle background"
+          />
         </div>
         <div class="circle" id="sccisors-circle">
           <div class="mid-circle">
-            <img class="hands" src="./images/icon-scissors.svg" alt="" />
+            <img
+              class="hands"
+              src="./images/icon-scissors.svg"
+              alt="hand sign scissors"
+            />
           </div>
         </div>
         <div class="circle" id="rock-circle">
           <div class="mid-circle">
-            <img class="hands" src="./images/icon-rock.svg" alt="" />
+            <img
+              class="hands"
+              src="./images/icon-rock.svg"
+              alt="hand sign rock"
+            />
           </div>
         </div>
         <div class="circle" id="paper-circle">
           <div class="mid-circle">
-            <img class="hands" src="./images/icon-paper.svg" alt="" />
+            <img
+              class="hands"
+              src="./images/icon-paper.svg"
+              alt="hand sign paper"
+            />
           </div>
         </div>
       </div>
       <button id="rules-btn">RULES</button>
+      <div class="modal">
+        <div class="rules">
+          <h2 class="title rules-title">RULES</h2>
+          <img src="./images/image-rules.svg" alt="rules of the basic game" />
+          <img
+            id="close-toggler"
+            src="./images/icon-close.svg"
+            alt="close toggler
+          X"
+          />
+        </div>
+      </div>
     </main>
+    <script src="./script.js"></script>
   </body>
 </html>
