added winnig animation

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="playground hide">
         <div class="player">
           <h3>YOU PICKED</h3>
-          <div class="ground">
+          <div class="ground" id="selected">
             <div id="win-wave" class="animation-win hide"></div>
             <div
               class="circle circle-position bigger-circle paper-circle selected-animation hide"
